--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "firebase": "^7.7.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-firebase": "^2.2.8",
+    "react-firebaseui": "^4.1.0",
     "react-jss": "^10.0.3",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.1.1",
+    "react-scripts": "^3.3.0",
     "react-social-icons": "^4.1.0"
   },
   "scripts": {
